fixed bug in fuzzychrcls entity; added fuzzy class visualisation in show view

--- a/war/expsys.html
+++ b/war/expsys.html
@@ -4,7 +4,21 @@
 <head>
 	<title>expsys</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<script type="text/javascript" language="javascript" src="d3.v2.js"></script>
+  <script type="text/javascript" language="javascript" src="d3_vis.js"></script>
 	<script type="text/javascript" language="javascript" src="expsys/expsys.nocache.js"></script>
+	<style type='text/css'>
+	  circle:hover {
+		  cursor: move;
+		}
+		
+		.yTicksName {
+		  font-weight: 100;
+		  font-family: Courier, monospace;
+		  font-size: xx-small;
+		  text-align: left;
+		}
+	</style>
 </head>
 
 <body class="mybody">
