--- a/war/expsys.html
+++ b/war/expsys.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" language="javascript" src="d3.v2.js"></script>
   <script type="text/javascript" language="javascript" src="d3_vis.js"></script>
 	<script type="text/javascript" language="javascript" src="expsys/expsys.nocache.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<style type='text/css'>
 	  circle:hover {
 		  cursor: move;
