better organization of code for binding Java and JavaScript; improved characteristic's fuzzy set javascript graph - now it shows characteristic's title above graph and values beneath (values are moveable)

--- a/war/expsys.html
+++ b/war/expsys.html
@@ -13,12 +13,23 @@
 		  cursor: move;
 		}
 		
+		.dragCircle:hover {
+		  cursor: move;
+		}
+		
 		.yTicksName {
-		  font-weight: 100;
 		  font-family: Courier, monospace;
 		  font-size: xx-small;
 		  text-align: left;
 		}
+		
+		.xTicks {
+      font-size: xx-small;
+    }
+    
+    .chrVals {
+      font-size: xx-small;
+    }
 	</style>
 </head>
 
